User-management-Implement

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,10 @@
-@import "./reset";
-@import "./variable";
-@import "./messages";
-@import "./side-bar";
 @import "font-awesome-sprockets";
-@import "./font-awesome";
+@import "font-awesome";
+@import "./reset";
+@import "config/colors";
+@import "modules/flash";
+@import "modules/variable";
+@import "modules/messages";
+@import "modules/side-bar";
+@import "modules/user";
+
