--- a/app/views/shared/_main_chat.html.haml
+++ b/app/views/shared/_main_chat.html.haml
@@ -5,12 +5,11 @@
       .group-info__name__member
         Member yuta
     .group-info__edit
-      =link_to "#", class: "group-info__edit__btn" do
+      = link_to edit_group_path(@group) do
         Edit
 
   .message-list
-    = render "messages-group"
-    = render "messages-group"
+    
     
   .form
     %form.new_message
@@ -21,5 +20,6 @@
           %input{type:"file", class: "input-box__image__file"}
       %input{type:"submit", class: "submit-btn", value: "Send"}
     
+      
       
       
