--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -14,9 +14,12 @@
   .group-list
     - current_user.groups.each do |group|
       .group-list__info
-        =link_to '#', class: "group-list__link" do
+        =link_to group_messages_path(group), class: "group-list__link" do
           .group-list__name
             = group.name
           .group-list__message
-            まだメッセージはありません。
+            = group.show_last_message
+            
+
+            
       
