Chat-auto-update

--- a/app/views/shared/_main_chat.html.haml
+++ b/app/views/shared/_main_chat.html.haml
@@ -14,7 +14,7 @@
 
 
 
-  .message-list
+  .message-list.messages{data: {message: {id: @message.id}}}
     = render partial: "shared/message", collection: @messages
   
     
