--- a/app/views/shared/_message.html.haml
+++ b/app/views/shared/_message.html.haml
@@ -1,10 +1,11 @@
-.message-list__info
-  .message-list__info__name
-    = message.user.name
-  .message-list__info__date
-    =message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-.message-list__text
-  - if message.content.present?
-    %p.lower-message__content
-      = message.content
-  = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
+.message{data: {message: {id: message.id}}}
+  .message-list__info
+    .message-list__info__name
+      = message.user.name
+    .message-list__info__date
+      =message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+  .message-list__text
+    - if message.content.present?
+      %p.lower-message__content
+        = message.content
+    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
