--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -53,9 +53,12 @@
       padding:35px 0 0 40px;
       &__name{
         margin-right: 10px;
+        font-size: 16px;
+        
       }
       &__date{
         color: $main-gray-color;
+        font-size: 12px;
       }
     }
     &__text{
@@ -95,6 +98,7 @@
       position: absolute;
       top:15px;
       right:130px;
+      cursor:pointer;
     }
   }
 
