lower-message__content__add

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -60,9 +60,14 @@
         color: $main-gray-color;
         font-size: 12px;
       }
+    
     }
     &__text{
       padding:12px 0 46px 40px;
+      .lower-message__content{
+        margin-bottom: 10px;
+        font-size: 14px;
+      }
     }
   }
   
