form__message-fix

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -80,6 +80,7 @@
     &__message{
       width: 100%;
       height:50px;
+      padding: 0 40px 0 10px; 
     }
     .new_message{
       height: 50px;
